--- a/main.html
+++ b/main.html
@@ -8,6 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h3>What is the capital of India?</h3>
+	<input type="radio" name="capital">New Delhi
+	<br><input type="radio" name="capital">Mumbai
+	<blockquote style="Max-width:600px; margin:10px; padding:15px; Border-left: 8px solid green; background-color:#f8fffe; font-weight:bold;">
+		New Delhi is the capital of India and an administrative district of NCT Delhi.
+	</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
