--- a/main.html
+++ b/main.html
@@ -11,7 +11,8 @@
 	<h3>What is the capital of India?</h3>
 	<input type="radio" name="capital">New Delhi
 	<br><input type="radio" name="capital">Mumbai
-	<blockquote style="Max-width:600px; margin:10px; padding:15px; Border-left: 8px solid green; background-color:#f8fffe; font-weight:bold;">
+	<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi" style="Max-width:600px; 
+margin:10px; padding:15px; Border-left: 8px solid green; background-color:#f8fffe; font-weight:bold;">
 		New Delhi is the capital of India and an administrative district of NCT Delhi.
 	</blockquote>
     <script type="text/javascript" src="./script.js">
